--- a/movement.html
+++ b/movement.html
@@ -40,12 +40,12 @@ body {
     color:#ffffff;
     pointer-events:none;
     white-space:nowrap;
-    overflow:hidden; /* PREVENTS LEAKING */
+    overflow:hidden;
 }
 
-/* LEFT SIDE — PERFECTLY CENTERED + SLOWER */
+/* LEFT SIDE — CENTERED BETWEEN BORDERS */
 .page-frame-outer::before {
-    left:22px; /* CENTER BETWEEN BORDERS */
+    left:11px; /* TRUE CENTER OF BORDER CHANNEL */
     animation:leftScroll 36s linear infinite;
 }
 
@@ -54,9 +54,9 @@ body {
     to   { transform:translateY(-100%); }
 }
 
-/* RIGHT SIDE — PERFECTLY CENTERED + SLOWER */
+/* RIGHT SIDE — CENTERED BETWEEN BORDERS */
 .page-frame-outer::after {
-    right:22px; /* CENTER BETWEEN BORDERS */
+    right:11px; /* TRUE CENTER OF BORDER CHANNEL */
     animation:rightScroll 36s linear infinite;
 }
 
