--- a/movement.html
+++ b/movement.html
@@ -55,7 +55,7 @@ body {
 }
 
 /* RIGHT SIDE — CENTERED BETWEEN BORDERS */
-.page-frame-outer::before {
+.page-frame-outer::after {
     right:11px; /* TRUE CENTER OF BORDER CHANNEL */
     animation:rightScroll 36s linear infinite;
 }
