--- a/patchbabyworld1.html
+++ b/patchbabyworld1.html
@@ -1,1 +1,177 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EPÒK | Patch Baby — Girl World</title>
+
+<style>
+* { margin:0; padding:0; box-sizing:border-box; }
+
+html, body {
+    width:100%;
+    height:100%;
+    background:#000;
+    overflow:hidden;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
+/* ============ DOUBLE ROYAL FRAME (LOCKED) ============ */
+.page-frame-outer {
+    position:fixed;
+    inset:0;
+    padding:22px;
+    border:2px solid rgba(212,175,55,0.65);
+    pointer-events:none;
+    z-index:50;
+}
+
+.page-frame-outer::before,
+.page-frame-outer::after {
+    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+    position:absolute;
+    top:22px;
+    bottom:22px;
+    width:22px;
+    writing-mode:vertical-rl;
+    font-size:0.65rem;
+    letter-spacing:0.35em;
+    color:#ffffff;
+    white-space:nowrap;
+}
+
+.page-frame-outer::before {
+    left:1px;
+    animation:leftScroll 45s linear infinite;
+}
+
+.page-frame-outer::after {
+    right:9px;
+    animation:rightScroll 45s linear infinite;
+}
+
+@keyframes leftScroll {
+    from { transform:translateY(100%); }
+    to { transform:translateY(-100%); }
+}
+
+@keyframes rightScroll {
+    from { transform:translateY(-100%); }
+    to { transform:translateY(100%); }
+}
+
+/* Bottom Arabic text */
+.arabic-border {
+    position:absolute;
+    bottom:6px;
+    left:0;
+    right:0;
+    font-size:0.7rem;
+    letter-spacing:0.45em;
+    color:#ffffff;
+    white-space:nowrap;
+    overflow:hidden;
+    text-align:center;
+}
+
+.arabic-border span {
+    display:inline-block;
+    padding-left:100%;
+    animation:arabic-scroll 18s linear infinite;
+}
+
+@keyframes arabic-scroll {
+    from { transform:translateX(0); }
+    to { transform:translateX(-100%); }
+}
+
+/* ============ WORLD STAGE ============ */
+.world-stage {
+    position:fixed;
+    inset:0;
+    z-index:1;
+}
+
+.world-base,
+.world-overlay {
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    object-fit:contain;
+}
+
+/* IN-WORLD NAV (NO TABS) */
+.world-nav {
+    position:absolute;
+    bottom:12%;
+    width:100%;
+    text-align:center;
+    z-index:10;
+}
+
+.world-nav span {
+    font-size:0.7rem;
+    letter-spacing:0.35em;
+    color:#ffffff;
+    cursor:pointer;
+    opacity:0.75;
+    transition:opacity .3s ease;
+}
+
+.world-nav span:hover {
+    opacity:1;
+}
+
+/* FADE TRANSITION */
+.fade-out {
+    animation:fadeOut 1.2s forwards;
+}
+
+@keyframes fadeOut {
+    to { opacity:0; }
+}
+</style>
+</head>
+
+<body>
+
+<div class="page-frame-outer">
+    <div class="arabic-border">
+        <span>
+            قَ على قيد الحياة. انهض. كن. ادخل إلى عالم إيبوك الخاص بك •
+            قَ على قيد الحياة. انهض. كن. ادخل إلى عالم إيبوك الخاص بك •
+        </span>
+    </div>
+</div>
+
+<div class="world-stage" id="worldStage">
+
+    <!-- GIRL WORLD BASE -->
+    <img src="images/23.png" class="world-base" alt="Girl World">
+
+    <!-- GIRL WORLD OVERLAY -->
+    <img src="images/23n2.png" class="world-overlay" alt="Girl World Logo">
+
+    <!-- IN-WORLD NAVIGATION -->
+    <div class="world-nav">
+        <span id="toBoy">ENTER BOY WORLD →</span>
+    </div>
+
+</div>
+
+<script>
+const stage = document.getElementById("worldStage");
+const toBoy = document.getElementById("toBoy");
+
+toBoy.addEventListener("click", () => {
+    stage.classList.add("fade-out");
+    setTimeout(() => {
+        window.location.href = "patchbabyworld2.html";
+    }, 1200);
+});
+</script>
+
+</body>
+</html>
