--- a/patchbaby.html
+++ b/patchbaby.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -188,14 +187,17 @@ setTimeout(() => {
 }, 6000);
 
 text.addEventListener("click", () => {
-    stage.classList.add("fade-out");
+    document.body.classList.add("fade-out");
     audio.pause();
     setTimeout(() => {
-        // NEXT WORLD PAGE WILL LOAD HERE
-        // window.location.href = "patchbabyworld1.html";
+        window.location.href = "patchbabyworld1.html";
     }, 1200);
 });
 </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
