--- a/signature-apparel-premiere2.html
+++ b/signature-apparel-premiere2.html
@@ -1,1 +1,309 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>EPÒK | Signature Apparel Premiere 2</title>
+
+<style>
+* { margin:0; padding:0; box-sizing:border-box; }
+
+html, body {
+    width:100%;
+    height:100%;
+    background:#000;
+    color:#f2f2f2;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
+
+/* ================= TOP NAV (SCROLLABLE MOBILE) ================= */
+.top-nav {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:64px;
+    background:rgba(0,0,0,0.88);
+    backdrop-filter:blur(10px);
+    z-index:1000;
+    border-bottom:1px solid rgba(212,175,55,0.25);
+}
+
+.nav-scroll {
+    height:100%;
+    overflow-x:auto;
+    white-space:nowrap;
+    display:flex;
+    align-items:center;
+    padding:0 6vw;
+}
+
+.nav-scroll::-webkit-scrollbar { display:none; }
+
+.nav-links {
+    display:inline-flex;
+    gap:26px;
+}
+
+.nav-links a {
+    text-decoration:none;
+    color:#e8e4d8;
+    font-size:0.8rem;
+    letter-spacing:0.22em;
+    text-transform:uppercase;
+}
+
+.nav-links a.featured {
+    color:#f3d688;
+    border:1px solid rgba(212,175,55,0.75);
+    padding:8px 14px;
+}
+
+/* ================= DOUBLE ROYAL FRAME ================= */
+.page-frame-outer {
+    position:fixed;
+    inset:0;
+    padding:22px;
+    border:2px solid rgba(212,175,55,0.65);
+    pointer-events:none;
+    z-index:50;
+}
+
+.page-frame-outer::before,
+.page-frame-outer::after {
+    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+    position:absolute;
+    top:22px;
+    bottom:22px;
+    width:22px;
+    writing-mode:vertical-rl;
+    font-size:0.65rem;
+    letter-spacing:0.35em;
+    color:#fff;
+}
+
+.page-frame-outer::before { left:1px; }
+.page-frame-outer::after { right:9px; }
+
+.arabic-border {
+    position:absolute;
+    bottom:6px;
+    left:0;
+    right:0;
+    text-align:center;
+    font-size:0.7rem;
+    letter-spacing:0.45em;
+    color:#fff;
+}
+
+/* ================= PAGE CONTENT ================= */
+.page-wrap {
+    padding-top:88px;
+    padding-bottom:120px;
+    max-width:1600px;
+    margin:0 auto;
+}
+
+.hero {
+    width:100%;
+    border-radius:22px;
+    overflow:hidden;
+    border:1px solid rgba(212,175,55,0.35);
+    box-shadow:0 40px 120px rgba(0,0,0,0.9);
+}
+
+.hero img {
+    width:100%;
+    display:block;
+}
+
+/* ================= GALLERY ================= */
+.section {
+    margin-top:48px;
+}
+
+.section h2 {
+    text-align:center;
+    font-size:1rem;
+    letter-spacing:0.35em;
+    text-transform:uppercase;
+    color:#f3d688;
+    margin-bottom:24px;
+}
+
+.gallery {
+    display:flex;
+    gap:18px;
+    overflow-x:auto;
+    padding:10px;
+}
+
+.gallery::-webkit-scrollbar { display:none; }
+
+.card {
+    flex:0 0 auto;
+    width:320px;
+    border:1px solid rgba(212,175,55,0.25);
+    border-radius:18px;
+    background:#000;
+}
+
+.card img {
+    width:100%;
+    display:block;
+}
+
+.card-info {
+    padding:14px;
+}
+
+.card-info h4 {
+    font-size:0.8rem;
+    letter-spacing:0.2em;
+    text-transform:uppercase;
+}
+
+.price {
+    color:#f3d688;
+    margin-top:6px;
+}
+
+.buy {
+    margin-top:10px;
+    font-size:0.7rem;
+    letter-spacing:0.22em;
+    text-transform:uppercase;
+    padding:10px;
+    border-radius:999px;
+    border:1px solid rgba(212,175,55,0.4);
+    background:rgba(212,175,55,0.15);
+    color:#f3d688;
+    cursor:not-allowed;
+}
+
+.note {
+    margin-top:6px;
+    font-size:0.65rem;
+    letter-spacing:0.2em;
+    opacity:0.7;
+}
+
+/* ================= MOBILE ================= */
+@media(max-width:768px){
+    .page-frame-outer { padding:14px; }
+    .gallery { padding-left:6vw; }
+}
+</style>
+</head>
+
+<body>
+
+<nav class="top-nav">
+    <div class="nav-scroll">
+        <div class="nav-links">
+            <a href="home.html">Home</a>
+            <a href="movement.html">Movement</a>
+            <a href="patchbaby.html">Patch Baby</a>
+            <a href="book.html">The Book</a>
+            <a href="store.html">Store</a>
+            <a href="checkout.html">Checkout</a>
+            <a href="about.html">About</a>
+            <a class="featured" href="signature-apparel-premiere.html">SIGNATURE APPAREL PREMIERE</a>
+        </div>
+    </div>
+</nav>
+
+<div class="page-frame-outer">
+    <div class="arabic-border">
+        قَ على قيد الحياة. انهض. كن. ادخل إلى عالم إيبوك الخاص بك •
+    </div>
+</div>
+
+<div class="page-wrap">
+
+    <!-- MODEL ART -->
+    <div class="hero">
+        <img src="ModelPictures/patchbabystreetwear.png" alt="">
+    </div>
+
+    <!-- GIRL LOOK -->
+    <div class="section">
+        <h2>Girl Look</h2>
+        <div class="gallery">
+
+            <div class="card">
+                <img src="ModelPictures/patchbabysstreetwear/pbfittedcap1.png">
+                <div class="card-info">
+                    <h4>Fitted Cap</h4>
+                    <div class="price">$65.00</div>
+                    <button class="buy">BUY (DISABLED)</button>
+                    <div class="note">Available Jan 15, 2026</div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="ModelPictures/patchbabysstreetwear/Pbwomanscrophoodiefront.png">
+                <div class="card-info">
+                    <h4>Crop Hoodie</h4>
+                    <div class="price">$110.00</div>
+                    <button class="buy">BUY (DISABLED)</button>
+                    <div class="note">Available Jan 15, 2026</div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="ModelPictures/patchbabysstreetwear/Pbwomansyogafront.png">
+                <div class="card-info">
+                    <h4>Yoga Pants</h4>
+                    <div class="price">$80.00</div>
+                    <button class="buy">BUY (DISABLED)</button>
+                    <div class="note">Available Jan 15, 2026</div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- BOY LOOK -->
+    <div class="section">
+        <h2>Boy Look</h2>
+        <div class="gallery">
+
+            <div class="card">
+                <img src="ModelPictures/patchbabysstreetwear/Pbsnapback1.png">
+                <div class="card-info">
+                    <h4>Snapback</h4>
+                    <div class="price">$65.00</div>
+                    <button class="buy">BUY (DISABLED)</button>
+                    <div class="note">Available Jan 15, 2026</div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="ModelPictures/patchbabysstreetwear/Pbmenshoodiefront.png">
+                <div class="card-info">
+                    <h4>Hoodie</h4>
+                    <div class="price">$110.00</div>
+                    <button class="buy">BUY (DISABLED)</button>
+                    <div class="note">Available Jan 15, 2026</div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="ModelPictures/patchbabysstreetwear/Pbmensshortsfront.png">
+                <div class="card-info">
+                    <h4>Sweat Shorts</h4>
+                    <div class="price">$80.00</div>
+                    <button class="buy">BUY (DISABLED)</button>
+                    <div class="note">Available Jan 15, 2026</div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+</body>
+</html>
 
