--- a/signature-apparel-premiere.html
+++ b/signature-apparel-premiere.html
@@ -721,8 +721,8 @@ html, body {
                 <div class="look-title">PATCH BABY JOGGER SET</div>
 
                 <div class="nav-arrows">
-                    <a class="nav-link" href="Model0.html">← PREVIOUS LOOK</a>
-                    <a class="nav-link" href="Model2.html">NEXT LOOK →</a>
+                    <a class="nav-link" href="signature-apparel-premiere.html">← PREVIOUS LOOK</a>
+                    <a class="nav-link" href="signature-apparel-premiere2.html">NEXT LOOK →</a>
                 </div>
             </div>
         </div>
